# llm-playbook

./: Dockerfile  Makefile  README.md  ci.yml  context_eng_.py  env.example  llm_prompt_eng_.py  llm_prompt_eng_vs_context_eng_.py  pyproject.toml  rag_03_complete_production_pipeline.py
dcos/: evaluation.md
eval/: qa_set.jsonl
examples/: 01_min_rag_cli.py  04_advance_rag_production_pipeline.py  05_rag_pdf_groq_annotated.py  05_rag_pipeline_v3.py  06_context_engineering.py  Retrieval-Augmented Generation with LangChain + FAISS + Zephyr-7B.py  llm_prompt_eng_vs_context_eng_.py  rag_02_complete_production_pipeline.py
src/llm_playbook/eval/: retrieval_eval.py
