[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-playbook"
version = "0.1.0"
description = "RAG pipelines and agent experiments with a retrieval evaluation harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-groq>=0.1",
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.6",
    "groq>=0.6",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
    "tiktoken>=0.7",
    "spacy>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
